fix copy button alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -154,9 +154,10 @@ aside {
 .filled-message-content {
   display: none;
   flex-flow: column nowrap;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
-  padding: 32px;
+  padding: 32px 32px 50px 32px;
 }
 .message-content {
   height: 83%;
